[package]
name = "qp-compare"
version = "0.1.0"
edition = "2024"

[lib]
name = "qp_compare"

[profile.release]
opt-level = 1  # Note: 2 or above seems to cause deno runtime errors.

[dependencies]
# Apollo internal dependencies
apollo-compiler = "1.28"
apollo-federation = { git = "https://github.com/apollographql/router", branch = "dev" }
router-bridge = "=0.6.4+v2.9.3"

# Other dependencies
clap = { version = "4", features = ["derive"] }
diff = "0.1"
once_cell = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde_json_bytes = { version = "0.2", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
